--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cambria:wght@100&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Cambria:wght@100&display=swap')
 
 [theme]
 primaryColor="#F63366"
