--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,4 @@ primaryColor="#F63366"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
-#font-family='Cambria'
-#font="sans serif"
+font="sans serif"
